fixes #4555 metrics to plot was miss aligned

--- a/plugins/CoreVisualizations/stylesheets/jqplot.css
+++ b/plugins/CoreVisualizations/stylesheets/jqplot.css
@@ -251,6 +251,7 @@ a.rowevolution-startmulti:hover {
 
 .jqplot-seriespicker-popover input.select {
     margin-right: 8px;
+    min-height: 5px;
 }
 
 .jqplot-seriespicker-popover p.pickColumn,
